<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">EasyShopping</string>

    // Button names
    <string name="button_current_list">To Buy</string>
    <string name="button_shopping_lists">Shopping Lists</string>
    <string name="button_categories">Categories</string>
    <string name="button_products">Products</string>
    <string name="button_shop">Stores</string>

    // Action menus
    <string name="action_settings">Settings</string>
    <string name="action_new">New</string>
    <string name="action_delete">Delete</string>
    <string name="action_select_all">Select all</string>
    <string name="action_edit">Edit</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_reload">Reload</string>

    // Setting keys
    <string name="pref_key_reset_product_database">prefKeyResetDatabase</string>
    <string name="pref_key_nearby_radius">prefKeySelectNearbyRadius</string>

    // Activities
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_shop_details">Store details</string>
    <string name="title_activity_new_product">Add new product</string>
    <string name="title_activity_shop_categories">Shop categories</string>
    <string name="list_item_shop_open_now_icon">Open now</string>
    <string name="list_item_shop_shopping_cart_icon">Add to shopping list</string>
    <string name="list_item_shop_category_reorder_icon">Reorder categories</string>
    <string name="list_item_product_shopping_cart_icon">Add to shopping list</string>
    <string name="shop_detail_icon">Store details</string>
    <string name="shop_detail_name_hint">Store name</string>
    <string name="shop_detail_address_icon">Address</string>
    <string name="shop_detail_address_text">Address</string>
    <string name="shop_detail_country_text">Country</string>
    <string name="shop_detail_website_icon">Website</string>
    <string name="shop_detail_website_hint">Website</string>
    <string name="shop_detail_phone_number_icon">Phone number</string>
    <string name="shop_detail_phone_number_hint">Phone number</string>
    <string name="shop_detail_opening_hours_icon">Opening hours</string>
    <string name="shop_detail_categories">Category list</string>

    // Dialogs
    <string name="dialog_new_product">Enter new product name</string>
    <string name="dialog_create">Create</string>
    <string name="dialog_cancel">Cancel</string>
    
    <string name="dialog_import_shops_title">Create store entries</string>
    <string name="dialog_import_shops_question"><xliff:g id="number_of_shops">%1$s</xliff:g> new stores found. Should these be created?</string>

    <string name="dialog_delete_shops_title">Delete stores</string>
    <string name="dialog_delete_shops_question">Are you sure you want to delete <xliff:g id="number_of_shops">%1$s</xliff:g> store(s)?</string>
    <string name="dialog_delete_shops_question_one">Are you sure you want to delete <xliff:g id="number_of_shops">%1$s</xliff:g> store?</string>

    <string name="dialog_delete_shop_categories_title">Delete store categories</string>
    <string name="dialog_delete_shop_categories_question">Are you sure you want to delete <xliff:g id="number_of_categories">%1$s</xliff:g> categories?</string>
    <string name="dialog_delete_shop_categories_question_one">Are you sure you want to delete <xliff:g id="number_of_categories">%1$s</xliff:g> category?</string>

    <string name="dialog_delete_products_title">Delete products</string>
    <string name="dialog_delete_products_question">Are you sure you want to delete <xliff:g id="number_of_categories">%1$s</xliff:g> products?</string>
    <string name="dialog_delete_products_question_one">Are you sure you want to delete <xliff:g id="number_of_categories">%1$s</xliff:g> product?</string>

    // Implicit intent error message
    <string name="error_msg_no_map">There is no map service available</string>
    <string name="error_msg_no_browser">There is no browser service available</string>
    <string name="error_msg_no_phone">There is no phone service available</string>

    // Opening hours
    <string name="opening_hours_open_until">open until</string>

    // Toasts
    <string name="toast_fetching_stores">Fetching stores</string>
    <string name="toast_updating_stores">Updating stores</string>

</resources>
